--- a/pyramid_gui/surveyorgui/development.ini
+++ b/pyramid_gui/surveyorgui/development.ini
@@ -15,7 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
-sqlalchemy.url = sqlite:///%(here)s/surveyorgui.sqlite
+sqlalchemy.url = postgresql://spiscan:spiscan@localhost:5432/spiscan
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
